# StockAgent

./: .gitignore
backend/: README.md  main.py  pyproject.toml  test.ipynb
backend/src/: agents.py  api.py  main.py  tools.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
